[gd_scene load_steps=18 format=1]

[ext_resource path="res://Playlist.gd" type="Script" id=1]
[ext_resource path="res://Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://MusicPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Left.png" type="Texture" id=4]
[ext_resource path="res://Graphics/LeftHover.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Right.png" type="Texture" id=6]
[ext_resource path="res://Graphics/RightHover.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Quit.png" type="Texture" id=8]
[ext_resource path="res://Graphics/QuitHover.png" type="Texture" id=9]
[ext_resource path="res://Graphics/AudioOn.png" type="Texture" id=10]
[ext_resource path="res://Graphics/AudioOnHover.png" type="Texture" id=11]
[ext_resource path="res://LiberationSans-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Audio/Jingle.ogg" type="AudioStream" id=13]
[ext_resource path="res://Graphics/Instructions.png" type="Texture" id=14]
[ext_resource path="res://Graphics/InstructionsHover.png" type="Texture" id=15]
[ext_resource path="res://Instructions.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 12 )

[node name="Playlist" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Level" parent="." instance=ExtResource( 2 )]

[node name="MusicPlayer" parent="." instance=ExtResource( 3 )]

stream/autoplay = false

[node name="PreviousButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="NextButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="MuteButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/hover = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.289608 )
text = "Level Title"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VictoryJingle" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 13 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="InstructionsButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
textures/hover = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="FadeFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 4500.0
margin/bottom = 4500.0
color = Color( 0.976471, 0.933333, 0.831373, 1 )

[node name="Instructions" parent="." instance=ExtResource( 16 )]

visibility/visible = false

[node name="QuitFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 4500.0
margin/bottom = 4500.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="pressed" from="MuteButton" to="." method="_on_MuteButton_pressed"]

[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]


